--- a/wf/templates/wf/baseApproval.html
+++ b/wf/templates/wf/baseApproval.html
@@ -82,8 +82,8 @@
     </table>
 </div>
 
-<form class="ajax form-horizontal" autocomplete="off" method="post" action="/approval/1/from_config/{{ flow.id }}">
 {% if nowApproval['user_from'] == config.USER_FROM_CONFIG %}
+    <form class="ajax form-horizontal" autocomplete="off" method="post" action="/approval/1/from_config/{{ flow.id }}">
     {% if config.WORK_FLOW['1']['can'][nowApproval['user_step']] == 'create' %}
         <div class="control-group">
             <label class="control-label">
@@ -114,7 +114,7 @@
                 是否已经付款
             </label>
             <div class="controls">
-                <select name="approval_status" id="approval_status">
+                <select name="finance_approval_status" id="finance_approval_status">
                     <option value="0">请选择</option>
                     <option value="{{ config.APPROVAL_PAYED }}">{{ config.STEP_NAMING[config.APPROVAL_PAYED] }}</option>
                 </select>
@@ -255,6 +255,7 @@ $(function() {
             {{ form.hidden_tag() }}
             <input type="hidden" name="is_ajax" value="1" />
             <input type="hidden" name="flow_id" value="{{ flow.id }}" />
+            <input type="hidden" name="cate" value="{{ flow.f_type }}" />
             <button type="submit" class="btn btn-primary">提交</button>
         </div>
     </div>
